Release Syscat 1.5.2 with photo groups
